src/test/ui/issues/issue-43925.stderr
error: invalid argument for `cfg(..)`
  --> $DIR/issue-43925.rs:1:24
   |
LL | #[link(name="foo", cfg("rlib"))]
   |                        ^^^^^^

error: aborting due to previous error

