src/test/ui/issues/issue-43925.rs
#[link(name="foo", cfg("rlib"))] //~ ERROR invalid argument for `cfg(..)`
extern {}

fn main() {}
